MODELINKS-72: fixed sendMessage by links